--- a/analytics/package.json
+++ b/analytics/package.json
@@ -8,7 +8,8 @@
     "start:ts": "ts-node src/server",
     "build": "rm -rf ./dist && tsc --project ./",
     "start": "node ./dist/server",
-    "start:prod": "pnpm run build && node ./dist/server"
+    "start:prod": "pnpm run build && node ./dist/server",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -18,10 +19,14 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "firebase-admin": "^12.0.0",
+    "jest": "^29.7.0",
     "node-cron": "^3.0.3",
     "resend": "^3.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.17",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
